#Use this to add new components to the build
#add_subdirectory($TYPE/somecomponent)

if(BUILD_AUDIO_COMPONENTS)
    add_subdirectory(audio/soundemitter)
    add_subdirectory(audio/soundlistener)
endif()
if(BUILD_GRAPHICS_COMPONENTS)
    add_subdirectory(graphics/spriterenderer)
    add_subdirectory(graphics/textrenderer)
    add_subdirectory(graphics/cameracontroller)
    add_subdirectory(graphics/discsectionrenderer)
endif()
if(BUILD_INPUT_COMPONENTS)
    add_subdirectory(input/keyboardinput)
endif()
if(BUILD_PHYSICS_COMPONENTS)
    #add_subdirectory(physics)
endif()
if(BUILD_OTHER_COMPONENTS)
    add_subdirectory(other/qtscript)
    add_subdirectory(other/spherecollision)
endif()
