#Use this to add new components to the build
#add_subdirectory($TYPE/somecomponent)

if(BUILD_AUDIO_COMPONENTS)
    add_subdirectory(audio/soundemitter)
    add_subdirectory(audio/soundlistener)
endif()
if(BUILD_GRAPHICS_COMPONENTS)
    add_subdirectory(graphics/spriterenderer)
    add_subdirectory(graphics/beamrenderer)
    #add_subdirectory(graphics/textrenderer)
    add_subdirectory(graphics/cameracontroller)
    add_subdirectory(graphics/uimanager)
    #add_subdirectory(graphics/discsectionrenderer)
    #add_subdirectory(graphics/discrenderer)
endif()
if(BUILD_INPUT_COMPONENTS)
    add_subdirectory(input/keyboardinput)
    add_subdirectory(input/mouseinput)
    add_subdirectory(input/touchinput)
endif()
if(BUILD_PHYSICS_COMPONENTS)
    #add_subdirectory(physics)
endif()
if(BUILD_OTHER_COMPONENTS)
    add_subdirectory(other/qtscript)
    add_subdirectory(other/spherecollision)
    add_subdirectory(scripting)
endif()
